--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html>
 <html lang="en">
 
 <head>
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-    <h1>
-        <Hello World/h1>
-</body>
+    <h1>Hello World </h1>
 
 </html>
